--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                 <div class="underline"></div>
                 <table>
                     <tr class="row row-1">
-                        <td class="col-1"><img src="img/u15009.png"></td>
+                        <td class="col-1">
+                            <div class="gopng_u15009_outer">
+                                <div class="gopng_u15009"></div>
+                            </div>
+                        </td>
                         <td class="col-2">
                             <p>
                                 <span>月度</span>
@@ -116,11 +120,14 @@
                 </table>
             </div>
             <div class="middle">
-            	<div class="yawRate">
-            		<p>偏航率:<span id="ongridLinechartYawRate" style="font-size:30px;font-weight:bolder;"></span></p>
-					<img src="img/u15063.png">
-            	</div>
-            	<div id="ongridLinechart" class="lineChart"></div>
+                <div class="yawRate">
+                    <p>偏航率:<span id="ongridLinechartYawRate" style="font-size:30px;font-weight:bolder;"></span></p>
+                    <div class="gopng_u15063_outer">
+                        <div class="gopng_u15063">
+                        </div>
+                    </div>
+                </div>
+                <div id="ongridLinechart" class="lineChart"></div>
             </div>
             <div id="ongridBarchart" class="right"></div>
         </div>
@@ -131,7 +138,11 @@
                 <div class="underline"></div>
                 <table>
                     <tr class="row row-1">
-                        <td class="col-1"><img src="img/u15009.png"></td>
+                        <td class="col-1">
+                            <div class="gopng_u15009_outer">
+                                <div class="gopng_u15009"></div>
+                            </div>
+                        </td>
                         <td class="col-2">
                             <p>
                                 <span>月度</span>
@@ -230,13 +241,15 @@
                     </tr>
                 </table>
             </div>
-
             <div class="middle">
-            	<div class="yawRate">
-            		<p>偏航率:<span id="genEnergyLinechartYawRate" style="font-size:30px;font-weight:bolder;"></span></p>
-					<img src="img/u15063.png">
-            	</div>
-            	<div id="genEnergyLinechart" class="lineChart"></div>
+                <div class="yawRate">
+                    <p>偏航率:<span id="genEnergyLinechartYawRate" style="font-size:30px;font-weight:bolder;"></span></p>
+                    <div class="gopng_u15063_outer">
+                        <div class="gopng_u15063">
+                        </div>
+                    </div>
+                </div>
+                <div id="genEnergyLinechart" class="lineChart"></div>
             </div>
             <div id="genEnergyBarchart" class="right"></div>
         </div>
