--- a/index.html
+++ b/index.html
@@ -6,254 +6,135 @@
     <title>经营指标</title>
     <link rel="stylesheet" type="text/css" href="css/mtarget.css">
 </head>
-
 <body>
     <div id='content'>
-        <div class="up">
-            <div id="ongridStat" class="left" v-cloak>
-                <p>截止{{date}}，{{wfname}}电场{{typeName}}电量经营分析：</p>
-                <!-- <em>截止2016年8月17日，xxx电场上网电量经营分析：</em> -->
-                <div class="underline"></div>
-                <table>
-                    <tr class="row row-1">
-                        <td class="col-1">
-                            <div class="gopng_u15009_outer">
-                                <div class="gopng_u15009"></div>
-                            </div>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>月度</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>年度</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-2">
-                        <td class="col-1">
-                            <p>
-                                <span>计划{{typeName}}电量(MWh)</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyPlan}}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualPlan}}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-3">
-                        <td class="col-1">
-                            <p>
-                                <span>实际{{typeName}}电量(MWh)</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyActual}}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualActual}}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-4">
-                        <td class="col-1">
-                            <p>
-                                <span>完成率</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyActual/monthlyPlan | toPercent }}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualActual/annualPlan | toPercent }}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-5">
-                        <td class="col-1">
-                            <p>
-                                <span>去年同期</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{sameMonthLastYear}}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{samePeriodLastYear}}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-6">
-                        <td class="col-1">
-                            <p>
-                                <span>同比增幅</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyActual/sameMonthLastYear-1 | toPercent }}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualActual/samePeriodLastYear-1 | toPercent }}</span>
-                            </p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="middle">
-                <div class="yawRate">
-                    <p>偏航率:<span id="ongridLinechartYawRate" style="font-size:30px;font-weight:bolder;"></span></p>
-                    <div class="gopng_u15063_outer">
-                        <div class="gopng_u15063">
-                        </div>
-                    </div>
-                </div>
-                <div id="ongridLinechart" class="lineChart"></div>
-            </div>
-            <div id="ongridBarchart" class="right"></div>
-        </div>
-        <div class="up">
-            <div id="genEnergyStat" class="left" v-cloak>
-                <p>截止{{date}}，{{wfname}}电场{{typeName}}电量经营分析：</p>
-                <!-- <em>截止2016年8月17日，xxx电场上网电量经营分析：</em> -->
-                <div class="underline"></div>
-                <table>
-                    <tr class="row row-1">
-                        <td class="col-1">
-                            <div class="gopng_u15009_outer">
-                                <div class="gopng_u15009"></div>
-                            </div>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>月度</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>年度</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-2">
-                        <td class="col-1">
-                            <p>
-                                <span>计划{{typeName}}电量(MWh)</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyPlan}}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualPlan}}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-3">
-                        <td class="col-1">
-                            <p>
-                                <span>实际{{typeName}}电量(MWh)</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyActual}}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualActual}}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-4">
-                        <td class="col-1">
-                            <p>
-                                <span>完成率</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyActual/monthlyPlan | toPercent }}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualActual/annualPlan | toPercent }}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-5">
-                        <td class="col-1">
-                            <p>
-                                <span>去年同期</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{sameMonthLastYear}}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{samePeriodLastYear}}</span>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr class="row row-6">
-                        <td class="col-1">
-                            <p>
-                                <span>同比增幅</span>
-                            </p>
-                        </td>
-                        <td class="col-2">
-                            <p>
-                                <span>{{monthlyActual/sameMonthLastYear-1 | toPercent }}</span>
-                            </p>
-                        </td>
-                        <td class="col-3">
-                            <p>
-                                <span>{{annualActual/samePeriodLastYear-1 | toPercent }}</span>
-                            </p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="middle">
-                <div class="yawRate">
-                    <p>偏航率:<span id="genEnergyLinechartYawRate" style="font-size:30px;font-weight:bolder;"></span></p>
-                    <div class="gopng_u15063_outer">
-                        <div class="gopng_u15063">
-                        </div>
-                    </div>
-                </div>
-                <div id="genEnergyLinechart" class="lineChart"></div>
-            </div>
-            <div id="genEnergyBarchart" class="right"></div>
+        <div class="up" v-for="mtarget in mtargets">
+            <c-mtarget :my-mtarget="mtarget" :my-index="$index"></c-mtarget>
         </div>
     </div>
+    <script type="text/x-template" id="cmtarget">
+            <div class="left" v-cloak>
+                <p>截止{{statinfo.date}}，{{statinfo.wfname}}电场{{targetname}}经营分析：</p>
+
+                <div class="underline"></div>
+                <table>
+                    <tr class="row row-1">
+                        <td class="col-1">
+                            <div class="gopng_u15009_outer">
+                                <div class="gopng_u15009"></div>
+                            </div>
+                        </td>
+                        <td class="col-2">
+                            <p>
+                                <span>月度</span>
+                            </p>
+                        </td>
+                        <td class="col-3">
+                            <p>
+                                <span>年度</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="row row-2">
+                        <td class="col-1">
+                            <p>
+                                <span>计划{{targetname}}(MWh)</span>
+                            </p>
+                        </td>
+                        <td class="col-2">
+                            <p>
+                                <span>{{statinfo.monthlyPlan}}</span>
+                            </p>
+                        </td>
+                        <td class="col-3">
+                            <p>
+                                <span>{{statinfo.annualPlan}}</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="row row-3">
+                        <td class="col-1">
+                            <p>
+                                <span>实际{{targetname}}(MWh)</span>
+                            </p>
+                        </td>
+                        <td class="col-2">
+                            <p>
+                                <span>{{statinfo.monthlyActual}}</span>
+                            </p>
+                        </td>
+                        <td class="col-3">
+                            <p>
+                                <span>{{statinfo.annualActual}}</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="row row-4">
+                        <td class="col-1">
+                            <p>
+                                <span>完成率</span>
+                            </p>
+                        </td>
+                        <td class="col-2">
+                            <p>
+                                <span>{{statinfo.monthlyActual/statinfo.monthlyPlan | toPercent }}</span>
+                            </p>
+                        </td>
+                        <td class="col-3">
+                            <p>
+                                <span>{{statinfo.annualActual/statinfo.annualPlan | toPercent }}</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="row row-5">
+                        <td class="col-1">
+                            <p>
+                                <span>去年同期</span>
+                            </p>
+                        </td>
+                        <td class="col-2">
+                            <p>
+                                <span>{{statinfo.sameMonthLastYear}}</span>
+                            </p>
+                        </td>
+                        <td class="col-3">
+                            <p>
+                                <span>{{statinfo.samePeriodLastYear}}</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr class="row row-6">
+                        <td class="col-1">
+                            <p>
+                                <span>同比增幅</span>
+                            </p>
+                        </td>
+                        <td class="col-2">
+                            <p>
+                                <span>{{statinfo.monthlyActual/statinfo.sameMonthLastYear-1 | toPercent }}</span>
+                            </p>
+                        </td>
+                        <td class="col-3">
+                            <p>
+                                <span>{{statinfo.annualActual/statinfo.samePeriodLastYear-1 | toPercent }}</span>
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="middle">
+                <div class="yawRate">
+                    <p>偏航率:<span style="font-size:30px;font-weight:bolder;">{{linechart.deviationRate | toPercent}}</span></p>
+                    <div class="gopng_u15063_outer">
+                        <div class="gopng_u15063">
+                        </div>
+                    </div>
+                </div>
+                <div id="{{linechartId}}" class="lineChart"></div>
+            </div>
+            <div id="{{barchartId}}" class="right"></div>
+    </script>
+
     <script type="text/javascript" src="js/lib/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="js/lib/echarts.min.js"></script>
     <script type="text/javascript" src="js/lib/vue.min.js"></script>
