--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
             <div class="middle">
                 <div class="yawRate">
-                    <p>偏航率:<span style="font-size:30px;font-weight:bolder;">{{linechart.deviationRate | toPercent}}</span></p>
+                    <p class="yawRateText">偏航率:<span>{{linechart.deviationRate | toPercent}}</span></p>
                     <div class="gopng_u15063_outer">
                         <div class="gopng_u15063">
                         </div>
@@ -138,6 +138,8 @@
     <script type="text/javascript" src="js/lib/echarts.min.js"></script>
     <script type="text/javascript" src="js/lib/vue.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="rem.js"></script>
+
 </body>
 
 </html>
